--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -1,8 +1,9 @@
 already-teleporting: "<red>You are already teleporting!"
 teleporting: "<green>Teleporting... Do not move!"
-teleporting-cancelled: "<red>Teleporting cancelled!"
+cancelled: "<red>Teleporting cancelled!"
 no-valid-location: "<red>No valid location found!"
 cooldown: "<red>This action is on cooldown"
 teleported: "<green>Teleported!"
 reload-failed: "<red>An error occurred while reloading the config!"
+reload-success: "<green>Config reloaded!"
 teleporting-other: "<green>Teleporting <target>..."
